# correctness-judge

./: .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml
meta_eval/: __init__.py  __main__.py  benchmark.py  metrics.py  run.py  runner.py
src/correctness_judge/: __init__.py  base.py  models.py  prompts.py  vital.py
tests/: test_aggregate.py  test_models.py  test_parse_json.py  test_parse_number.py  test_shuffle.py
